testdata/baselines/reference/submodule/conformance/prototypePropertyAssignmentMergeAcrossFiles2.errors.txt
other.js(2,11): error TS2749: 'Ns.One' refers to a value, but is being used as a type here. Did you mean 'typeof Ns.One'?
other.js(7,11): error TS2749: 'Ns.Two' refers to a value, but is being used as a type here. Did you mean 'typeof Ns.Two'?


==== prototypePropertyAssignmentMergeAcrossFiles2.js (0 errors) ====
    var Ns = {}
    Ns.One = function() {};
    Ns.Two = function() {};
    
    Ns.One.prototype = {
      ok() {},
    };
    Ns.Two.prototype = {
    }
    
==== other.js (2 errors) ====
    /**
     * @type {Ns.One}
              ~~~~~~
!!! error TS2749: 'Ns.One' refers to a value, but is being used as a type here. Did you mean 'typeof Ns.One'?
     */
    var one = undefined;
    one.wat;
    /**
     * @type {Ns.Two}
              ~~~~~~
!!! error TS2749: 'Ns.Two' refers to a value, but is being used as a type here. Did you mean 'typeof Ns.Two'?
     */
    var two = undefined;
    two.wat;
    